added BackgroundTasks ref

--- a/PreInstallConfigTaskSample/TargetUWPApplication.csproj
+++ b/PreInstallConfigTaskSample/TargetUWPApplication.csproj
@@ -155,6 +155,12 @@
       <Version>6.2.3</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BackgroundTasks\BackgroundTasks.csproj">
+      <Project>{9d8ca0ce-707f-42a3-a482-751095b44178}</Project>
+      <Name>BackgroundTasks</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
